tests/tooling/fixtures/native/recovery/positive/modulo_loop_mix.objc3
module ModuloLoopMix;

fn main() -> i32 {
  let acc = 0;
  for (let i = 1; i < 6; i += 1) {
    acc += (i * 3) % 5;
  }
  return acc;
}